tests/e2e/assignment_int.error
Error: syntax error in story at line 1, column 3

1|    2 = ""
        ^

E0041: `=` is not allowed here
